# Channel-bottom-bot

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.superpowers/sdd/: final-fix-brief.md  final-fix-report.md  final-review-manifest.md  progress.md  task-1-brief.md  task-1-report.md  task-1-review-package.txt  task-2-brief.md  task-2-report.md  task-2-review-package.txt  task-3-brief.md  task-3-report.md  task-3-review-package-v2.txt  task-3-review-package.txt  task-4-brief.md  task-4-report.md  task-4-review-package-v2.txt  task-4-review-package.txt  task-5-brief.md  task-5-report.md  task-5-review-package-v2.txt  task-5-review-package.txt  task-6-brief.md  task-6-report.md  task-6-review-package-v2.txt  task-6-review-package.txt  task-7-brief.md  task-7-report.md  task-7-review-package.txt  task-8-brief.md  task-8-report.md  task-8-review-package.txt
src/bottom_post_bot/: __init__.py  aiogram_gateway.py  analytics.py  app.py  channels.py  config.py  database.py  domain.py  drafts.py  handlers.py  listeners.py  maintenance.py  membership.py  notifications.py  pending_drafts.py  permissions.py  publisher.py  repositories.py  scheduler.py  stats.py
tests/: test_aiogram_gateway.py  test_aiogram_handlers.py  test_analytics.py  test_config.py  test_daily_stats_scheduler.py  test_database.py  test_domain.py  test_drafts.py  test_handlers.py  test_maintenance.py  test_membership.py  test_pending_drafts.py  test_permissions.py  test_publisher.py  test_scheduler.py  test_stats.py
(+2 files in other folders)
