[build-system]
requires = ["setuptools>=75"]
build-backend = "setuptools.build_meta"

[project]
name = "bottom-post-bot"
version = "0.1.0"
description = "Token-only aiogram multi-tenant channel bottom-post bot"
readme = "README.md"
requires-python = ">=3.12,<3.14"
dependencies = [
    "aiogram>=3.26,<4",
    "aiosqlite>=0.21,<1",
    "tzdata>=2025.1,<2027",
]

[project.optional-dependencies]
test = [
    "pytest>=8.4,<10",
    "pytest-asyncio>=1.1,<2",
]

[project.scripts]
bottom-post-bot = "bottom_post_bot.app:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
